[package]
name = "app-healthcheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fbs-application = { path = "../fbs-application" }
fbs-amqp = { path = "../fbs-amqp" }
fbs-executor = { path = "../fbs-executor" }
fbs-runtime = { path = "../fbs-runtime" }
