[package]
name = "fbs-application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fbs-library = { path = "../fbs-library" }
fbs-executor = { path = "../fbs-executor" }
fbs-runtime = { path = "../fbs-runtime" }
