[package]
name = "fbs-http-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fbs-library = { path = "../fbs-library" }
fbs-executor = { path = "../fbs-executor" }
fbs-runtime = { path = "../fbs-runtime" }
libcurl-sys = { path = "../libcurl-sys" }
thiserror = "1.0.40"
libc = "0.2.147"
const-cstr = "0.3.0"
