[package]
name = "fbs-resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fbs-library = { path = "../fbs-library" }
fbs-runtime = { path = "../fbs-runtime" }
libc = "0.2.147"
thiserror = "1.0.40"

[build-dependencies]
bindgen = "0.66.1"
