[package]
name = "fbs-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
fbs-library = { path = "../fbs-library" }
fbs-executor = { path = "../fbs-executor" }
fbs-reactor = { path = "../fbs-reactor" }
libcurl-sys = { path = "../libcurl-sys" }
thiserror = "1.0.40"
libc = "0.2.147"
const-cstr = "0.3.0"
